--- a/client/src/utilities/ScreenHeading/ScreenHeading.css
+++ b/client/src/utilities/ScreenHeading/ScreenHeading.css
@@ -2,13 +2,13 @@
     display: flex;
     flex-direction: column;
     align-items: center;
-    width: 100px;
-    margin: 0 0 50px 0;
+    width: 100%;
+    margin: 0 0 100px 0;
 }
 
 .screen-sub-heading {
     letter-spacing: 3px;
-    margin: 8px 0 18px 0;
+    margin: 8px 0 10px 0;
     font-size: 12px;
     color: var(--black);
 }
@@ -30,7 +30,7 @@
 .seperator-line {
     width: 100%;
     height: 2px;
-    background-color: #1f2235 ;
+    background-color: #1f221f ;
 }
 
 .seperator-blob {
